@@ -15,6 +15,12 @@ Description:
 
 ----------------------------------------------------------------------
 Name: Lars Bergstrom (larsberg@cs.uchicago.edu)
+Date: 2008/02/05
+Description:
+
+Added the Windows Config structure
+----------------------------------------------------------------------
+Name: Lars Bergstrom (larsberg@cs.uchicago.edu)
 Date: 2008/01/31
 Description:
 
